--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
         <link rel="stylesheet" href="asset/css/owl.carousel.min.css" type="text/css">
         <link rel="stylesheet" href="asset/css/owl.carousel.css" type="text/css">
         <link href="https://cdn.lineicons.com/1.0.1/LineIcons.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 
         <link rel="stylesheet" href="asset/css/style.css" type="text/css">
         <link rel="stylesheet" href="asset/css/responsive.css" type="text/css">
+        <link rel="stylesheet" href="asset/css/animate.css" type="text/css">
+
+        
 </head>
 
 <body>
@@ -178,7 +180,7 @@
                 </div>
         </div>
         <div class="hero">
-                <div class="heroText text-center"><span class="">We Are Dream</span>
+                <div class="heroText text-center slideInRight animated wow"><span class="">We Are Dream</span>
                         <p>To delight all the children in the World</p>
                         <button class="btn-success Donate readMore">Read More</button>
                 </div>
@@ -221,9 +223,20 @@
                         </div>
                 </div>
 
-                <div class="workSlider owl-carousel slideInRight animated delay-.2s">
+                <div class="workSlider owl-carousel slideInRight animated  wow delay-.2s">
                         <div class="worksliderItem text-center">
-                                <img src="asset/img/s2.png" class="workslideImg" animation-duration=".2" alt="">
+                                <img src="asset/img/s2.png" class="workslideImg" >
+                                <div class="sliderCont text-center">
+                                        <div class="imgCont">
+                                                <img src="asset/img/ss1.png" alt="">
+                                        </div>
+                                        <h6>Qurbani</h6>
+                                        <button class="btn  Donate WorkDonate">
+                                                Donate</button>
+                                </div>
+                        </div>
+                        <div class="worksliderItem text-center ">
+                                <img src="asset/img/s2.png" class="workslideImg" >
                                 <div class="sliderCont text-center">
                                         <div class="imgCont">
                                                 <img src="asset/img/ss1.png" alt="">
@@ -245,18 +258,7 @@
                                 </div>
                         </div>
                         <div class="worksliderItem text-center ">
-                                <img src="asset/img/s2.png" class="workslideImg" animation-duration=".2" alt="">
-                                <div class="sliderCont text-center">
-                                        <div class="imgCont">
-                                                <img src="asset/img/ss1.png" alt="">
-                                        </div>
-                                        <h6>Qurbani</h6>
-                                        <button class="btn  Donate WorkDonate">
-                                                Donate</button>
-                                </div>
-                        </div>
-                        <div class="worksliderItem text-center ">
-                                <img src="asset/img/s2.png" class="workslideImg" animation-duration=".2" alt="">
+                                <img src="asset/img/s2.png" class="workslideImg" >
                                 <div class="sliderCont text-center">
                                         <div class="imgCont">
                                                 <img src="asset/img/ss1.png" alt="">
@@ -275,7 +277,7 @@
                                                 adipiscing aelit, sesd dwo eiusmod tempor incididunt ut labore et dolore
                                                 magana liqua. Quis ipsum sspendjisse ultrices gravida.</span>
 
-                                        <div class="newsSlider owl-carousel">
+                                        <div class="newsSlider owl-carousel slideInLeft animated wow ">
                                                 <div class="newsSliderItem">
                                                         <div class="card newsCard">
                                                                 <img src="asset/img/n1.png" class="card-img-top"
@@ -301,12 +303,12 @@
                         </div>
                 </div>
         </div>
-        <div class="counterSec">
+        <div class="counterSec animated slideInRight" animation-duration=".2s">
                 <div class="container">
                         <div class="row">
                                 <div class="col-lg-3 col-md-3 col-6">
-                                        <div class="countCont text-center">
-                                                <div class="counticon zoomIn" animation-duration=".2"
+                                        <div class="countCont text-center zoomIn animated  wow slow"  style="animation-delay:.4s">
+                                                <div class="counticon " 
                                                         animation-delay=".2">
                                                         <img src="asset/img/count1.png" alt="">
                                                 </div>
@@ -317,7 +319,7 @@
                                         </div>
                                 </div>
                                 <div class="col-lg-3 col-md-3 col-6">
-                                        <div class="countCont text-center">
+                                        <div class="countCont text-center zoomIn animated wow slow" style="animation-delay:.6s">
                                                 <div class="counticon">
                                                         <img src="asset/img/count2.png" alt="">
                                                 </div>
@@ -328,7 +330,7 @@
                                         </div>
                                 </div>
                                 <div class="col-lg-3 col-md-3 col-6">
-                                        <div class="countCont text-center">
+                                        <div class="countCont text-center zoomIn animated wow slow "  style="animation-delay:.8s">
                                                 <div class="counticon">
                                                         <img src="asset/img/count3.png" alt="">
                                                 </div>
@@ -339,7 +341,7 @@
                                         </div>
                                 </div>
                                 <div class="col-lg-3 col-md-3 col-6">
-                                        <div class="countCont text-center">
+                                        <div class="countCont text-center zoomIn animated wow slow"  style="animation-delay:1.2s">
                                                 <div class="counticon">
                                                         <img src="asset/img/count4.png" alt="">
                                                 </div>
@@ -358,7 +360,7 @@
                         <div class="row justify-content-center">
                                 <div class="col-lg-8 col-md-8 col-12 text-center">
                                         <h4 class="testTitle">Testimonials</h4>
-                                        <div class="TestSlider owl-carousel text-center ">
+                                        <div class="TestSlider owl-carousel text-center jackInTheBox animated wow" style="animation-delay: .4s">
                                                 <div class="testItem ">
                                                         <div class="testImg">
                                                                 <img src="asset/img/test1.png" alt="">
@@ -487,7 +489,9 @@
         <script src="asset/js/bootstrap.min.js"></script>
         <script src="asset/js/owl.carousel.js"></script>
         <script src="asset/js/owl.carousel.min.js"></script>
+        <script src="asset/js/wow.js"></script>
         <script src="asset/js/main.js"></script>
+   
 
 </body>
 
