--- a/index.html
+++ b/index.html
@@ -23,26 +23,24 @@
         <link rel="stylesheet" href="asset/css/responsive.css" type="text/css">
         <link rel="stylesheet" href="asset/css/animate.css" type="text/css">
 
-        
+
 </head>
 
 <body>
 
         <div class="main-menu">
-
-
                 <div class="container">
                         <div class="row">
                                 <div class="collapse navbar-collapse d-lg-none d-md-none" id="navbarNav">
                                         <ul class="navbar-nav">
                                                 <li class="nav-item active">
-                                                        <a class="nav-link" href="#">Home</a>
+                                                        <a class="nav-link" href="index.html">Home</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                        <a class="nav-link" href="#">About</a>
+                                                        <a class="nav-link" href="About.html">About</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+                                                        <a class="nav-link dropdown-toggle" href="Projects.html" id="navbarDropdown"
                                                                 role="button" data-toggle="dropdown"
                                                                 aria-haspopup="true" aria-expanded="false">Our
                                                                 Projects</a>
@@ -55,14 +53,14 @@
                                                                         here</a>
                                                         </div>
                                                 <li class="nav-item">
-                                                        <a class="nav-link " href="#" tabindex="-1">Media
+                                                        <a class="nav-link " href="gallery.html" tabindex="-1">Media
                                                                 Center</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                        <a class="nav-link " href="#" tabindex="-1">Donate</a>
+                                                        <a class="nav-link " href="Donat.html" tabindex="-1">Donate</a>
                                                 </li>
                                                 <li class="nav-item">
-                                                        <a class="nav-link " href="#" tabindex="-1">Contact</a>
+                                                        <a class="nav-link " href="contact.html" tabindex="-1">Contact</a>
                                                 </li>
                                         </ul>
                                         <div class="social d-lg-none d-md-none d-block">
@@ -99,15 +97,15 @@
                                                         id="navbarNav">
                                                         <ul class="navbar-nav">
                                                                 <li class="nav-item active">
-                                                                        <a class="nav-link" href="#">Home</a>
+                                                                        <a class="nav-link" href="index.html">Home</a>
                                                                 </li>
                                                                 <li class="nav-item">
-                                                                        <a class="nav-link" href="#">About</a>
+                                                                        <a class="nav-link" href="About.html">About</a>
                                                                 </li>
                                                                 <li class="nav-item">
-                                                                        <a class="nav-link dropdown-toggle" href="#"
-                                                                                id="navbarDropdown" role="button"
-                                                                                data-toggle="dropdown"
+                                                                        <a class="nav-link dropdown-toggle"
+                                                                                href="Projects.html" id="navbarDropdown"
+                                                                                role="button" data-toggle="dropdown"
                                                                                 aria-haspopup="true"
                                                                                 aria-expanded="false">Our
                                                                                 Projects</a>
@@ -124,16 +122,16 @@
                                                                                         here</a>
                                                                         </div>
                                                                 <li class="nav-item">
-                                                                        <a class="nav-link " href="#"
+                                                                        <a class="nav-link " href="gallery.html"
                                                                                 tabindex="-1">Media
                                                                                 Center</a>
                                                                 </li>
                                                                 <li class="nav-item">
-                                                                        <a class="nav-link " href="#"
+                                                                        <a class="nav-link " href="Donat.html"
                                                                                 tabindex="-1">Donate</a>
                                                                 </li>
                                                                 <li class="nav-item">
-                                                                        <a class="nav-link " href="#"
+                                                                        <a class="nav-link " href="contact.html"
                                                                                 tabindex="-1">Contact</a>
                                                                 </li>
                                                         </ul>
@@ -225,7 +223,7 @@
 
                 <div class="workSlider owl-carousel slideInRight animated  wow delay-.2s">
                         <div class="worksliderItem text-center">
-                                <img src="asset/img/s2.png" class="workslideImg" >
+                                <img src="asset/img/s2.png" class="workslideImg">
                                 <div class="sliderCont text-center">
                                         <div class="imgCont">
                                                 <img src="asset/img/ss1.png" alt="">
@@ -236,7 +234,7 @@
                                 </div>
                         </div>
                         <div class="worksliderItem text-center ">
-                                <img src="asset/img/s2.png" class="workslideImg" >
+                                <img src="asset/img/s2.png" class="workslideImg">
                                 <div class="sliderCont text-center">
                                         <div class="imgCont">
                                                 <img src="asset/img/ss1.png" alt="">
@@ -258,7 +256,7 @@
                                 </div>
                         </div>
                         <div class="worksliderItem text-center ">
-                                <img src="asset/img/s2.png" class="workslideImg" >
+                                <img src="asset/img/s2.png" class="workslideImg">
                                 <div class="sliderCont text-center">
                                         <div class="imgCont">
                                                 <img src="asset/img/ss1.png" alt="">
@@ -307,9 +305,9 @@
                 <div class="container">
                         <div class="row">
                                 <div class="col-lg-3 col-md-3 col-6">
-                                        <div class="countCont text-center zoomIn animated  wow slow"  style="animation-delay:.4s">
-                                                <div class="counticon " 
-                                                        animation-delay=".2">
+                                        <div class="countCont text-center zoomIn animated  wow slow"
+                                                style="animation-delay:.4s">
+                                                <div class="counticon " animation-delay=".2">
                                                         <img src="asset/img/count1.png" alt="">
                                                 </div>
                                                 <div class="countnum">
@@ -319,7 +317,8 @@
                                         </div>
                                 </div>
                                 <div class="col-lg-3 col-md-3 col-6">
-                                        <div class="countCont text-center zoomIn animated wow slow" style="animation-delay:.6s">
+                                        <div class="countCont text-center zoomIn animated wow slow"
+                                                style="animation-delay:.6s">
                                                 <div class="counticon">
                                                         <img src="asset/img/count2.png" alt="">
                                                 </div>
@@ -330,7 +329,8 @@
                                         </div>
                                 </div>
                                 <div class="col-lg-3 col-md-3 col-6">
-                                        <div class="countCont text-center zoomIn animated wow slow "  style="animation-delay:.8s">
+                                        <div class="countCont text-center zoomIn animated wow slow "
+                                                style="animation-delay:.8s">
                                                 <div class="counticon">
                                                         <img src="asset/img/count3.png" alt="">
                                                 </div>
@@ -341,7 +341,8 @@
                                         </div>
                                 </div>
                                 <div class="col-lg-3 col-md-3 col-6">
-                                        <div class="countCont text-center zoomIn animated wow slow"  style="animation-delay:1.2s">
+                                        <div class="countCont text-center zoomIn animated wow slow"
+                                                style="animation-delay:1.2s">
                                                 <div class="counticon">
                                                         <img src="asset/img/count4.png" alt="">
                                                 </div>
@@ -360,7 +361,8 @@
                         <div class="row justify-content-center">
                                 <div class="col-lg-8 col-md-8 col-12 text-center">
                                         <h4 class="testTitle">Testimonials</h4>
-                                        <div class="TestSlider owl-carousel text-center jackInTheBox animated wow" style="animation-delay: .4s">
+                                        <div class="TestSlider owl-carousel text-center jackInTheBox animated wow"
+                                                style="animation-delay: .4s">
                                                 <div class="testItem ">
                                                         <div class="testImg">
                                                                 <img src="asset/img/test1.png" alt="">
@@ -491,7 +493,7 @@
         <script src="asset/js/owl.carousel.min.js"></script>
         <script src="asset/js/wow.js"></script>
         <script src="asset/js/main.js"></script>
-   
+
 
 </body>
 
